# lemon_pdf

./: Cargo.toml  README.md  build.rs  expanded.rs
examples/: empty_pdf.rs
lemon_pdf_derive/: Cargo.toml
lemon_pdf_derive/src/: lib.rs
src/: array.rs  content.rs  context.rs  crossref.rs  deserializer.rs  dictionary.rs  document.rs  font.rs  lib.rs  object.rs  pagetree.rs  serializer.rs  stream.rs  structure_tree.rs  trailer.rs
src/font/: builtin.rs  descriptor.rs  encoding.rs  type0.rs
src/serializer/: error.rs
