[package]
name = "lemon_pdf"
version = "0.1.0"
authors = ["Manuel Reinhardt <manuel.rhdt@gmail.com>"]
edition = "2018"

[dependencies]
failure = "^0.1"
derive_more = "0.14.0"
flate2 = "^1"
byteorder = "1"
lemon_pdf_derive = { path = "./lemon_pdf_derive" }

[build-dependencies]
afm = "0.1.2"
glob = "0.3.0"
pom = "1"
quote = "0.6.11"
proc-macro2 = "0.4.27"
csv = "1.0.5"
Inflector = "0.11.4"

[dev-dependencies]
encoding_rs = "0.8.17"
