[package]
name = "lemon_pdf"
version = "0.1.0"
authors = ["Manuel Reinhardt <manuel.rhdt@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
derive_more = "0.99.5"
flate2 = "1"
byteorder = "1"
lemon_pdf_derive = { path = "./lemon_pdf_derive" }
rust-crypto = "0.2.36"
bitflags = "1"
log = "0.4.8"

[build-dependencies]
afm = "0.1.2"
glob = "0.3.0"
pom = "1"
quote = "1"
proc-macro2 = "1"
csv = "1"
Inflector = "0.11.4"

[dev-dependencies]
encoding_rs = "0.8.22"
